refs and clean up for 1912.00861

--- a/1912.00861/Sch_corr.tex
+++ b/1912.00861/Sch_corr.tex
@@ -9,9 +9,39 @@
 
 \usepackage{mathtools}
 
-\usepackage{hyperref}
-\hypersetup{colorlinks = true, linkcolor=black, citecolor=black, urlcolor=blue}
-\usepackage{url}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\linespread{1.05}
+\usepackage[papersize={7.4in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}\usepackage{url}
 
 \makeatletter
 
@@ -24,14 +54,6 @@
 %---- Show labels for equations ----
 
 %\usepackage[inner]{showlabels}
-
-%---- Page setup ----
-
-\topmargin=-1.5cm
-\oddsidemargin=0cm
-\evensidemargin=0cm
-\textwidth=17.5cm
-\textheight=23cm
 
 %---- Figures in equations ----
 
@@ -634,8 +656,8 @@ Using only wavefunctions presented in the previous section as input, we will arr
 
 \begin{figure}[t]
 \centerline{
-\begin{tabular}{c@{\hspace{3cm}}c@{\hspace{3cm}}c}
-\includegraphics[scale=1.3]{scattering} & \includegraphics[scale=1.5]{amp_1} & \includegraphics[scale=1.5]{amp_cl}\\
+\begin{tabular}{c@{\hspace{2cm}}c@{\hspace{2cm}}c}
+\includegraphics[scale=1.2]{scattering} & \includegraphics[scale=1.4]{amp_1} & \includegraphics[scale=1.4]{amp_cl}\\
 &\vspace{1pt}  &\\
 a) & b) & c)
 \end{tabular}
@@ -658,8 +680,8 @@ The main idea of our analysis is to break up propagators \eqref{proj} and \eqref
 
 For illustration and to fix diagrammatic notation, let us consider the emission and reabsorption of a matter excitation of dimension $\De$ by the boundary. Using \eqref{O_R}, \eqref{renorm}, \eqref{proj}, and \eqref{twop}, 
 \begin{align}
-\bcorr{\Iota_{E_1'}\hat{\calO}_{\De}\Iota_{E_2}\hat{\calO}_{\De} \Iota_{E_1}}&=\int d\mu_1 \sum_{m_1\in \mu_1 +\ZZ}\int d\mu_2\sum_{m_2 \in \mu_2+\ZZ}\int d\mu'_1 \sum_{m'_1 \in \mu'_1+\ZZ}\ket{\psi_{\lam'_1, m'_1}}\bra{\psi_{\lam_1,m_1}}\nn
-&\underbrace{\sum_{k=0}^{\infty}\int_{\calM}\left(\psi_{\lam'_1, m'_1}\right)^*\cdot \psi_{\lam_2, m_2}\cdot\ga^{\De}\psi^{0}_{\De,\mp( \De+k)}\int_{\calM}\left(\psi_{\lam_2, m_2}\right)^*\cdot\ga^{\De}\left(\psi^{0}_{\De, \mp(\De+k)}\right)^*\cdot \psi_{\lam_1,m_1} }_{\propto\, \de(m'_1-m_2\pm (\De+k))\de(m_2\mp(\De+k)-m_1)\de(E'_1-E_1)} \nn
+\bcorr{\Iota_{E_1'}\hat{\calO}_{\De}\Iota_{E_2}\hat{\calO}_{\De} \Iota_{E_1}}&=\int d\mu_1 \sum_{m_1\in \mu_1 +\ZZ}\int d\mu_2\sum_{m_2 \in \mu_2+\ZZ}\int d\mu'_1 \sum_{m'_1 \in \mu'_1+\ZZ}\ket{\psi_{\lam'_1, m'_1}}\bra{\psi_{\lam_1,m_1}} \times \nn
+&\hskip-1in \times \underbrace{\sum_{k=0}^{\infty}\int_{\calM}\left(\psi_{\lam'_1, m'_1}\right)^*\cdot \psi_{\lam_2, m_2}\cdot\ga^{\De}\psi^{0}_{\De,\mp( \De+k)}\int_{\calM}\left(\psi_{\lam_2, m_2}\right)^*\cdot\ga^{\De}\left(\psi^{0}_{\De, \mp(\De+k)}\right)^*\cdot \psi_{\lam_1,m_1} }_{\propto\, \de(m'_1-m_2\pm (\De+k))\de(m_2\mp(\De+k)-m_1)\de(E'_1-E_1)} \nn
 &=\int d\mu_1\, \ker\big[\bcorr{\Iota_{E'_1}\hat{\calO}_{\De}\Iota_{E_2}\hat{\calO}_{\De} \Iota_{E_1}}\big]\sum_{m_1 \in \mu_1+\ZZ} \ket{\psi_{\lam_1, m_1}}\bra{\psi_{\lam_1,m_1}}.
 \end{align}
 That the expression in the second line is proportional to denoted delta functions is due to the intertwiner property of the integrals; in addition it is guaranteed to be independent of $m$, which leads to the operator expression in the last line. We denote the kernel of this operator by the diagram in Figure \ref{fig:reabsorb}. It is to be understood that $\mu$-parameters are conserved at each vertex, for example $\mu_1=\mu_2 \mp \Delta$ (mod $1$). 
@@ -1058,9 +1080,10 @@ a+b, &a+c
 \end{matrix}; 1\right)
 \ee
 is the continuous dual Hahn polynomial of $n'$th degree in $x^2$, symmetric in $a, b, c$. We note $S_{k}\left(s_1; \De+i s_2, \De-i s_2, {1 \ov 2} \pm m_1\right)=(-1)^k S_{k}\left(s_2; \De+i s_1, \De-i s_1, {1 \ov 2}\mp m_2\right)$. This is the same function as appears in Clebsch-Gordon coefficients obtained in Section 3.2 of \cite{Gro05}. Using large-$k$ asymptotics of the function $S_{k}$, we find the norm of $\Ga$ to be
-\be \label{bnorm}
-\left[\figbox{0.7}{reabsorb_app}\right]_{\calF, \calU}=\de(E_1-E_1')N_{\lam_1, \mu_1}^{\lam_2, \De, \mp}, \quad N_{\lam_1, \mu_1}^{\lam_2, \De, \mp}={e^{\pm i \pi(\lam_1+\lam_2-1)} \ov 8 \pi^2} \rho_{\text{Pl}}(E_1, \mu_1)^{-1} \Ga(\De \pm i s_1 \pm is_2)^{-1}.
-\ee
+\begin{align} \label{bnorm}
+\left[\figbox{0.7}{reabsorb_app}\right]_{\calF, \calU}&= \,\,\de(E_1-E_1')N_{\lam_1, \mu_1}^{\lam_2, \De, \mp}, \quad {\rm where} \nn\nn
+N_{\lam_1, \mu_1}^{\lam_2, \De, \mp}&={e^{\pm i \pi(\lam_1+\lam_2-1)} \ov 8 \pi^2} \rho_{\text{Pl}}(E_1, \mu_1)^{-1} \Ga(\De \pm i s_1 \pm is_2)^{-1}.
+\end{align}
 Note the norm of $\Ga$ and $V$ are in fact the same, as the coefficients involved in the commutation relation between intertwiners \eqref{commapp} cancel between the two external legs in the diagram of \eqref{bnorm}.%where we use the Plancherel measure defined with respect to integration over $s$ rather than $E$ (see \eqref{ren} and \eqref{Plm}), $\rho_{\text{Pl}}(s, \mu)=s \rho_{\text{Pl}}(E, \mu)$. %In this appendix we will use a similarly defined $\rho_{\Sch}(s)=s \rho_{\Sch}(E).$
 
 Finally, let us obtain matrix elements of interactions. Using the integral formula for boundary wavefunctions \eqref{psi}
@@ -1076,9 +1099,10 @@ which amounts to a decomposition using bulk-boundary propagators, and the asympt
 C^{\lam_2, \De \mp}_{\lam_1, \mu_1}={\Ga(\De) \sqrt{\De-{1 \ov 2}} \ov 2 \pi}{e^{i \pi m_1} \ov \sin\pi(\lam_1\mp m_1)}{i^{\mp (\lam_1+\lam_2-1-\De)} \ov \sqrt{\Ga(2\De)}}\Ga(\De \pm is_1 \pm is_2)\sqrt{\rho_{\Sch}(E_1)\rho_{\Sch}(E_2)}.
 \ee
 Using \eqref{bnorm} and \eqref{bratio} we derive \eqref{diag1},
-\be \label{reabsorbamp}
-\figbox{0.75}{reabsorb_app}=\de(E_1-E'_1)N_{\lam_1, \mu_1}^{\lam_2, \De, \mp}\left |C^{\lam_2, \De \mp}_{\lam_1, \mu_1}\right |^2=\de(E_1-E'_1)\rho_{\Sch}(E_2)\rho_m(\De)A_{\bdy}(E_1, E_2, \De).
-\ee
+\begin{align} \label{reabsorbamp}
+\figbox{0.75}{reabsorb_app}&=\de(E_1-E'_1)N_{\lam_1, \mu_1}^{\lam_2, \De, \mp}\left |C^{\lam_2, \De \mp}_{\lam_1, \mu_1}\right |^2\nn
+&=\de(E_1-E'_1)\rho_{\Sch}(E_2)\rho_m(\De)A_{\bdy}(E_1, E_2, \De).
+\end{align}
 Note in \eqref{reabsorbamp} the dependence on $\mu_1$ in \eqref{bratio} cancels against that in \eqref{bnorm}---this would not be the case if we had used boundary wavefunctions $\psi^{\mp}$ rather than $\psi^{\pm}$ in \eqref{bmel}. Similarly, the absence of dependence on $\mu$ parameters in \eqref{diag2} as well as in the coefficients in \eqref{diag3}-\eqref{diag5} depend on \eqref{tHS}.
 \subsubsection{Involving three discrete irreps}
 Now we consider an intertwiner between three irreps, $V: \calF^{\mp}_{\lam} \to \calF_{\lam_1}^{\mp} \otimes \calF_{\lam_2}^{\mp}$. It is convenient to consider the larger commutative diagram
@@ -1103,8 +1127,9 @@ and we can derive a functional form for $iV$
 \ee
 with $\mathring{f}(z)=e^{\pm i \lam \vp}f(z)$ for $f \in \calF^{\mp}_{\lam}$ which will be useful for deriving a $6j$-symbol in the next section, as well as Clebsch-Gordon coefficients of $i\Ga$
 \begin{align}
-&\left[\figbox{0.7}{disc_opp_intertwiner}\right]_{\calU}={ c_{\lam_1, \mp(\lam_1+k)}^{\mp} c_{\lam_2, \mp(\lam_2+k)}^{\mp} \ov c_{\lam, \mp(\lam+k)}^{\mp}}\left[\figbox{0.7}{disc_opp_intertwiner}\right]_{\calF}\nn
-&=n!(\mp 1)^n\sqrt{{k! \ov \Ga(2\lam+k)}}\sqrt{{k_1! \ov \Ga(2\lam_1+k_1)}}\sqrt{{k_2! \ov \Ga(2\lam_2+k_2)}}\sum_{\substack{n_1+n_2=n\\
+\left[\figbox{0.7}{disc_opp_intertwiner}\right]_{\calU}&={ c_{\lam_1, \mp(\lam_1+k)}^{\mp} c_{\lam_2, \mp(\lam_2+k)}^{\mp} \ov c_{\lam, \mp(\lam+k)}^{\mp}}\left[\figbox{0.7}{disc_opp_intertwiner}\right]_{\calF}\nn
+&=n!(\mp 1)^n\sqrt{{k! \ov \Ga(2\lam+k)}}\sqrt{{k_1! \ov \Ga(2\lam_1+k_1)}}\sqrt{{k_2! \ov \Ga(2\lam_2+k_2)}} \times \nn
+& \times \sum_{\substack{n_1+n_2=n\\
  n_1 \leq k_1, n\\
   n_2 \leq k_2, n}}{(2\lam_1 +n)_{k_1-n_1} \ov n_1! (k_1-n_1)!}{(2\lam_2 +n)_{k_2-n_2} \ov n_2! (k_2-n_2)!}(-1)^{n_1}.
 \end{align}
@@ -1116,7 +1141,8 @@ The norm of $\Ga$ was given in \cite{SL2R},
 Next we obtain matrix elements using wavefunctions \eqref{psi0} which are finite sums:
 \begin{align} \label{mmel}
 \figbox{0.75}{disc_intertwiner}&=\int_{\tAdS_2}\left(\psi^{0}_{\lam_1, \mp(\lam_1+k_1)}\right)^*\cdot\left(\psi^{0}_{\lam_2, \mp(\lam_2+k_2)}\right)^*\cdot\psi^{0}_{\lam, \mp(\lam+k)}\nn
-&=\de(\lam_1+k_1+\lam_2+k_2-(\lam+k))\,C^{\lam_1, \lam_2}_{n}\left[\figbox{0.7}{disc_intertwiner}\right]_{\calU},
+&=\de(\lam_1+k_1+\lam_2+k_2-(\lam+k))\,C^{\lam_1, \lam_2}_{n} \times \nn
+& \quad \times \left[\figbox{0.7}{disc_intertwiner}\right]_{\calU},
 \end{align}
 \be \label{mratio}
 C_{n}^{\lam_1, \lam_2}=\sqrt{\left(\lam-{1 \ov 2}\right)\left(\lam_1-{1 \ov 2}\right)\left(\lam_2-{1 \ov 2}\right)}{2^{2\lam} \ov 4 \pi n!}{\Ga(\lam_1+\lam_2+{n-1 \ov 2}) \ov \Ga({1-n \ov 2})}\Ga\left(\lam_1+{n \ov 2}\right)\Ga\left(\lam_2+{n \ov 2}\right).
@@ -1167,10 +1193,14 @@ Next, we turn to solving the associator and dissociator \eqref{ass}, \eqref{diss
 \left[\figbox{0.66}{unassoc_merge}\right]_{\calF}\quad = F^{\lam_4, \De_1, \De_2, \mp}_{\lam_3}(\lam_0, \mu_0; n) \,d_n\quad \left[\figbox{0.66}{intertwiner_F_3} \right]_{\calF}.
 \ee
 By acting with $iV^{\mp}_{\De_1+\De_2+n; \De_1, \De_2}$ on
+\def\nnskip{\enskip\enskip}
 \begin{align}
-&\left[\figbox{0.66}{unassoc_app}\right]_{\calF}={1-e^{\pm 2 \pi i (\lam_0 \mp \mu_0)} \ov 2 \pi}z_1^{\mp \De_1}z_2^{\mp \De_2}e^{\mp i \left({\lam_3 + \lam_4-1-\De_1 -\De_2 \ov 2} \right)\vp_3}e^{\mp i \left({-\lam_3 - \lam_4+1-\De_1 -\De_2 \ov 2} \right)\vp_4}\vp_{43}^{\lam_3-\lam_4-1+\De_1+\De_2}\nn
-& \times\left(1-\left({z_1 \ov z_3}\right)^{\mp 1}\right)^{\lam_4-\De_1}\left(1-\left({z_1 \ov z_4}\right)^{\mp 1}\right)^{-\lam_4-\De_1}\left(1-\left({z_2 \ov z_3}\right)^{\mp 1}\right)^{\lam_3-1-\De_2}\left(1-\left({z_2 \ov z_4}\right)^{\mp 1}\right)^{-\lam_3+1-\De_2}\nn
-&\times (1-\chi)^{\lam_0}\hgfs(\lam_0+\lam_3-1+\De_2, \lam_0-\lam_4 + \De_1, \lam_3 -\lam_4+\De_1+\De_2; \chi) \hspace{20pt}   (\text{for } \vp_3+2\pi > \vp_4 > \vp_3 )
+\left[\figbox{0.66}{unassoc_app}\right]_{\calF}&={1-e^{\pm 2 \pi i (\lam_0 \mp \mu_0)} \ov 2 \pi}z_1^{\mp \De_1}z_2^{\mp \De_2}e^{\mp i \left({\lam_3 + \lam_4-1-\De_1 -\De_2 \ov 2} \right)\vp_3}\times\nn
+& \nnskip\times e^{\mp i \left({-\lam_3 - \lam_4+1-\De_1 -\De_2 \ov 2} \right)\vp_4}\vp_{43}^{\lam_3-\lam_4-1+\De_1+\De_2}\nn
+& \nnskip\times\left(1-\left({z_1 \ov z_3}\right)^{\mp 1}\right)^{\lam_4-\De_1}\left(1-\left({z_1 \ov z_4}\right)^{\mp 1}\right)^{-\lam_4-\De_1}\times\nn
+& \nnskip\times \left(1-\left({z_2 \ov z_3}\right)^{\mp 1}\right)^{\lam_3-1-\De_2}\left(1-\left({z_2 \ov z_4}\right)^{\mp 1}\right)^{-\lam_3+1-\De_2}\nn
+&\nnskip\times (1-\chi)^{\lam_0}\hgfs(\lam_0+\lam_3-1+\De_2, \lam_0-\lam_4 + \De_1, \lam_3 -\lam_4+\De_1+\De_2; \chi) \nn   
+& \nnskip (\text{for } \vp_3+2\pi > \vp_4 > \vp_3 )
 \end{align}
 where
 \be
