--- a/1908.03575/JTLogsFinal.tex
+++ b/1908.03575/JTLogsFinal.tex
@@ -13,6 +13,30 @@
 \usepackage{float}
 \usepackage{empheq}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 %Commands:
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
