--- a/1908.03575/JTLogsFinal.tex
+++ b/1908.03575/JTLogsFinal.tex
@@ -19,12 +19,14 @@ bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
+\usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 
 % these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
 
 \usepackage[small]{titlesec}
