--- a/1408.6300/ewedge-arxiv-v2.tex
+++ b/1408.6300/ewedge-arxiv-v2.tex
@@ -11,8 +11,36 @@
 \usepackage{amsmath} 
 \usepackage{amsfonts} 
 \usepackage{amssymb} 
-\usepackage{ccaption}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %
 % >> Only for drafts! <<
  % \usepackage[notref,notcite]{showkeys}
@@ -21,8 +49,6 @@
 %%% Figures, sectioning, Appendices %%%%%
 % Change the format of a figure caption
 % Makes figure number bold, indents and uses different font for caption.
-\captionnamefont{\bfseries} \captiontitlefont{\small\sffamily} \captiondelim{: } \hangcaption 
-\renewcommand{\figurename}{Fig.}
 
 
 %%%% Specific  macros  for the paper %%%%
