--- a/0705.0016/entent_submit.tex
+++ b/0705.0016/entent_submit.tex
@@ -6,7 +6,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
-\usepackage{ccaption}
+\usepackage[font=small]{caption}
+
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `basename #1 .tif`.png}
 \usepackage[usenames]{color}
 
@@ -53,22 +54,7 @@ bookmarksopenlevel=10
 \renewcommand{\theequation}{\thesection.\arabic{equation}}
 
 \makeatletter
-\renewcommand\section{\@startsection {section}{1}{\z@}%
-                                   {-3.5ex \@plus -1ex \@minus -.2ex}%nn
-                                   {2.3ex \@plus.2ex}%
-                                   {\normalfont\large\bfseries}}
-\renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
-                                     {-3.25ex\@plus -1ex \@minus -.2ex}%
-                                     {1.5ex \@plus .2ex}%
-                                     {\normalfont\bfseries}}
 
-% Change the format of a figure caption
-% Makes figure number bold, indents and uses different font for caption.
-  \captionnamefont{\bfseries}
-  \captiontitlefont{\small\sffamily}
-  \captiondelim{: }
-  \hangcaption
-  \renewcommand{\figurename}{Fig.}
 
 % This defines an appendix counter....\Appendix....if not using Roman
 % section headings then remove the last line that sets equation numbers
