--- a/1611.02269/Dark_Gravity_November_8th.tex
+++ b/1611.02269/Dark_Gravity_November_8th.tex
@@ -2,18 +2,42 @@
 
 \usepackage{epsf, amssymb,amsmath,dsfont}
 \usepackage{epsfig}
-\usepackage{hyperref}
 
-\setlength{\parskip}{0ex}
-%\advance\voffset by -1.5cm
-%\advance\hoffset by -2.1cm
-\setlength{\textwidth}{15.5cm}%{17.3cm}
-\setlength{\textheight}{21cm}
-\setlength{\topmargin}{ -.5cm}
-\setlength{\oddsidemargin}{-.125cm}
-\setlength{\evensidemargin}{-.125cm}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
 
+\usepackage[small]{titlesec}
+\usepackage{cite}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
   
 
 \makeatletter
@@ -1996,11 +2020,11 @@ Perhaps superficially our approach is similar in spirit to some earlier works \c
 \subsection{Emergent gravity and apparent dark matter in cosmological scenarios}
 
 
-In this paper we have focussed on the explanation of the observed gravitational phenomena attributed to dark matter. By this we mean the excess in the gravitational force or the missing mass that is observed in spiral or elliptical galaxies and in galaxy clusters. Of course, dark matter plays a central role in many other aspects of the current cosmological paradigm, in particular in structure formation and the explanation of the acoustic peaks in the cosmic microwave background. In none of these scenarios is it required that dark matter is   a particle: all that is needed is that its cosmological evolution and dynamics is consistent with a pressureless fluid. In our description we eventually end up with an estimate of the apparent dark matter density that in many respects behaves as required for structure formation and perhaps even for the explanation of the CMB spectrum. Namely, effectively the apparent dark matter that comes out of our emergent gravity description also leads to a gravitational  potential that attracts the baryonic matter as cold dark matter would do. 
+In this paper we have focussed on the explanation of the observed gravitational phenomena attributed to dark matter. By this we mean the excess in the gravitational force or the missing mass that is observed in spiral or elliptical galaxies and in galaxy clusters. Of course, dark matter plays a central role in many other aspects of the current cosmological paradigm, in particular in structure formation and the explanation of the acoustic peaks in the cosmic microwave background. In none of these scenarios is it required that dark matter is   a particle: all that is needed is that its cosmological evolution and dynamics is consistent with a pressureless fluid. In our description we eventually end up with an estimate of the apparent dark matter density that in many respects behaves as required for structure formation and perhaps even for the explanation of the CMB spectrum. Namely, effectively the apparent dark matter that comes out of our emergent gravity description also leads to a gravitational  potential that attracts the baryonic matter as cold dark matter would do. 
 
 However, the arguments and calculations that we presented in this paper are not yet sufficient  to answer the questions regarding the cosmological evolution of our equations. In particular, we   made use of the value of the present-day Hubble parameter $H_0$ in our equations, which  immediately raises the question whether one should use another value for the Hubble parameter at other cosmological times. In our calculations the parameter $H_0$ was assumed to be constant, since we made the approximation that our universe is entirely dominated by dark energy and that ordinary matter only leads to a small perturbation. This suggests that $H_0$ or rather $a_0$ should actually be defined in terms of the dark energy density, or the value of the cosmological constant.  This would imply that $a_0$ is indeed  constant, even though it takes a slightly different value. 
 
-A related issue is that in our analysis we assumed that dark energy is the dominant contribution to the energy density of our universe. According to our standard cosmological scenarioâs this is no longer true in the early times of our universe, in particular at the time of decoupling.  This poses again the question whether a theory in which   (apparent) dark matter is explained via emergent gravity would be able to reproduce the successful description of the CMB spectrum, the large scale structure and galaxy formation. These questions need to be understood before we can make any claim that our description of dark matter phenomena is as successful as the $\Lambda$CDM paradigm in describing the early universe and cosmology at large scales.  
+A related issue is that in our analysis we assumed that dark energy is the dominant contribution to the energy density of our universe. According to our standard cosmological scenarios this is no longer true in the early times of our universe, in particular at the time of decoupling.  This poses again the question whether a theory in which   (apparent) dark matter is explained via emergent gravity would be able to reproduce the successful description of the CMB spectrum, the large scale structure and galaxy formation. These questions need to be understood before we can make any claim that our description of dark matter phenomena is as successful as the $\Lambda$CDM paradigm in describing the early universe and cosmology at large scales.  
 
   By changing the way we view gravity, 
   namely as an emergent phenomenon in which the Einstein equations need be derived from 
@@ -2108,8 +2132,8 @@ Adv.\ Theor.\ Math.\ Phys.\  {\bf 2}, 231 (1998)
  [arXiv:hep-th/9711200].
 
 
-\bibitem{RyuTakayanagi} S. Ryu and T. Takayanagi, â``Holographic derivation of entanglement entropy from AdS/CFT,''â Phys. Rev. Lett. 96, 181602 (2006) [arXiv:hep-th/0603001]; %S. Ryu and T. Takayanagi, 
-â``Aspects of holographic entanglement entropy,''â JHEP 0608, 045 (2006) [arXiv:hep-th/0605073].
+\bibitem{RyuTakayanagi} S. Ryu and T. Takayanagi, ``Holographic derivation of entanglement entropy from AdS/CFT,'' Phys. Rev. Lett. 96, 181602 (2006) [arXiv:hep-th/0603001];
+``Aspects of holographic entanglement entropy,'' JHEP 0608, 045 (2006) [arXiv:hep-th/0605073].
 
 \bibitem{vanRaamsdonk} 
   M.~Van Raamsdonk,
@@ -2418,7 +2442,7 @@ D. A. Huse, R. Nandkishore, V. Oganesyan, A. Pal, S.L. Sondhi,  ``Localization p
   Phys.\ Rev.\ D {\bf 50} (1994) 846
   [gr-qc/9403028].
 
-\bibitem{ADM} R. Arnowitt, S. Deser, and C. W. Misner. The dynamics of general relativity. In L. Witten, editor, Gravitation: An Introduction to Current Research, pages 227â265. Wiley, 1962.
+\bibitem{ADM} R. Arnowitt, S. Deser, and C. W. Misner. The dynamics of general relativity. In L. Witten, editor, Gravitation: An Introduction to Current Research, pages 227--265. Wiley, 1962.
 
 
 \bibitem{Waldbook}
@@ -2429,7 +2453,7 @@ The University of Chicago Press, 1984.
 
  
   
-\bibitem{BrownYork}  J.D. Brown and J.W. York Jr, ``Quasilocal energy and conserved charges derived from the gravitational action,'' Phys.Rev. D, 47:1407â 1419, 1993.
+\bibitem{BrownYork}  J.D. Brown and J.W. York Jr, ``Quasilocal energy and conserved charges derived from the gravitational action,'' Phys.Rev. D, 47:1407  1419, 1993.
 
 
 %\cite{Brewin:2006qe}
