--- a/1306.0515v2/Removing-FW-prd.tex
+++ b/1306.0515v2/Removing-FW-prd.tex
@@ -258,14 +258,14 @@ depend on the coefficients $\alpha_{ij}$.
 The quantum states associated to undisturbed (young) black hole space times satisfy local conditions that distinguish
 vacuum states from excited states. The number of such black hole vacuum states is counted by the B\spc-H formula.
 
+\newpage
 
 So our second postulate is that among all states of the form~(\ref{genstate}),
 only a small subset are  physical black hole vacuum states
 
-\smallskip
 \medskip
-
-\hspace{-1mm}\parbox{8.2cm}{\addtolength{\baselineskip}{.7mm}
+\smallskip
+\parbox{8.2cm}{
 \it The physical Hilbert space of a young black hole and its entangled environment E is $e^{S_\BH} = 2^N$ dimensional.}
 \medskip
 \smallskip
