--- a/hep-th-0405152/noteadded.tex
+++ b/hep-th-0405152/noteadded.tex
@@ -22,6 +22,7 @@ bookmarksopenlevel=10
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
+\pagestyle{plain}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/mnsymbol.tex}
