fix the awful double strike 1s in quant-ph-0112010

--- a/quant-ph-0112010/quant-ph-0112010-psu.tex
+++ b/quant-ph-0112010/quant-ph-0112010-psu.tex
@@ -36,7 +36,7 @@ bookmarksopenlevel=10
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
-\def\one{1\hskip-.37em 1}
+\def\one{\mathbf 1}
 \def\ir{{\rm I}\hskip-.2em{\rm R}}
 \def\half{\textstyle{\frac{1}{2}}}
 \def\quarter{\textstyle{\frac{1}{4}}}
