--- a/quant-ph-9511030/concentration.tex
+++ b/quant-ph-9511030/concentration.tex
@@ -63,6 +63,8 @@ bookmarksopenlevel=10
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
+\raggedbottom
+
 \begin{document}
 
 \title{Concentrating Partial Entanglement \\ by Local Operations}
