--- a/hep-th-9401072/9401072.tex
+++ b/hep-th-9401072/9401072.tex
@@ -62,8 +62,10 @@ The entropy diverges in quantum field theory in the absence of an
 ultraviolet cutoff. Various related finite quantities can be
 extracted with further work.  We briefly discuss the corresponding
 question in string theory.
+
+PACS 98.80.Cq
+
 \end{abstract}
-%\pacs{98.80.Cq}
 
 \def\tr{\mathop{\rm tr}}
 
