--- a/gr-qc-9707012v1/examples.tex
+++ b/gr-qc-9707012v1/examples.tex
@@ -123,7 +123,10 @@ the binding energy of such a ball of dust as a fraction of its
 \noindent
 {\bf 6.} Using the map
 $$
-(t,x,y,z) \mapsto X= \pmatrix{t+z & x+iy\cr x-iy & t-z}\ ,
+(t,x,y,z) \mapsto X= 
+\begin{pmatrix}
+t+z & x+iy\cr x-iy & t-z
+\end{pmatrix}
 $$
 show that Minkowski spacetime may be identified with the space of
 Hermitian $2\times 2$ matrices $X$ with metric
@@ -136,7 +139,10 @@ $2\times 2$ matrices $U$ for which $\det (1+U)\ne0$. Now show that any
 $2\times 2$ unitary matrix $U$ may be expressed uniquely in terms of
 a real number $\tau$ and two complex numbers $\alpha$, $\beta$, as 
 $$
-U=e^{i\tau}\pmatrix{\alpha & \beta\cr -\bar\beta & \bar\alpha}
+U=e^{i\tau}
+\begin{pmatrix}
+\alpha & \beta\cr -\bar\beta & \bar\alpha
+\end{pmatrix}
 $$
 where the parameters $(\tau,\alpha,\beta)$ satisfy $|\alpha|^2
 +|\beta|^2 =1$, and are subject to the identification 
