--- a/1410.1486/BHThermo_v4_plain.tex
+++ b/1410.1486/BHThermo_v4_plain.tex
@@ -1,11 +1,41 @@
- \documentclass[11pt]{article}
-\usepackage{subfigure,amssymb,amsmath,cite,geometry,graphicx}
-\pdfoutput=1
-\addtolength{\textheight}{.8in}
-\addtolength{\textwidth}{1in}
-\addtolength{\topmargin}{-.4in}
-\addtolength{\evensidemargin}{-.5in}
-\addtolength{\oddsidemargin}{-.5in}
+ \documentclass[12pt]{article}
+\usepackage{subfigure,amssymb,amsmath,cite,graphicx}
+
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\sloppy
+%\setlength{\fboxrule}{0pt}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 \catcode`\@=11
 
 %       This causes equations to be numbered by section
@@ -2677,7 +2707,8 @@ contribution of the gravitational field.
 \end{appendix}
 
 
- 
+\raggedright
+
 %\section{Bibliography}\label{secbib}\index{bibliography}
  
 \begin{thebibliography}{999}\addtolength{\itemsep}{-.1ex}
