--- a/1410.1486/BHThermo_v4_plain.tex
+++ b/1410.1486/BHThermo_v4_plain.tex
@@ -2949,7 +2949,7 @@ thermal equilibrium, \emph{Phys.\ Rev.\ Lett.} {\bf 36}, (1976),
 and thermal Green's functions, \emph{Proc.\ Roy.\ Soc.\
 Lond.\ A} {\bf 358}, (1978), 467--494.
 
-\bibitem{Feynman}  R.~P.\ Feynman and A.~R.\ Hibbs, emph{Quantum
+\bibitem{Feynman}  R.~P.\ Feynman and A.~R.\ Hibbs, \emph{Quantum
 mechanics and path integrals} (McGraw-Hill, New York, 1965).
 
 \bibitem{Burgess} C.~P.\ Burgess, Quantum gravity in everyday life: 
