--- a/quant-ph-0702225/ent-review-last.tex
+++ b/quant-ph-0702225/ent-review-last.tex
@@ -1,17 +1,41 @@
 %%%%%%%%%%%%%%%%%%%%%%  The MAnuscript %%%%%%%%%%%%%%%
-\documentclass[twocolumn,aps,rmp]{revtex4}
+\documentclass[aps,rmp,12pt]{revtex4}
+
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
 
 %\usepackage{refcheck}
-\usepackage{hyperref}
 \usepackage{amssymb}
 %\usepackage{tikz}
 \usepackage{graphicx}
 \usepackage{xypic}
 
+\citestyle{plain}
+
 \begin{document}
 
 
-\draft
 \font\Bbb =msbm10
 \font\eufm =eufm10
 \def\Real{{\hbox{\Bbb R}}} \def\C{{\hbox {\Bbb C}}}
@@ -265,6 +289,9 @@ Technical University of Gda\'nsk, 80--952 Gda\'nsk, Poland
 
 
 \begin{abstract}
+\baselineskip=13pt
+\parskip=16pt
+
 All our former experience with application of quantum theory seems
 to say: {\it what is predicted by quantum formalism must  occur in
 laboratory}. But the essence of quantum formalism --- entanglement,
@@ -295,11 +322,15 @@ witnesses in detection of entanglement is emphasized.
 \end{abstract}
 \pacs{Pacs Numbers: 03.67.-a}
 \maketitle
+
+\pagestyle{empty}
+\newpage
 \tableofcontents
+\newpage
 
 
 
-
+\pagestyle{plain}
 
 \section{Introduction}
 
@@ -518,7 +549,7 @@ nonoperational, provides a basis for general theory of detection of
 entanglement.  A historical note is here in order.  Namely it turned
 out that both the general link between separability and positive maps
 as well as the Peres-Horodecki theorem were first known and expressed
-in slightly different language as early as in 70s \cite{Choi1972}
+in slightly different language as early as in 70s \cite{Choi1972}
 (see also \cite{Osaka,Woronowicz,Stoermer}).  The rediscovery by Peres
 and Horodecki's brought therefore powerful methods to entanglement
 theory as well as caused revival of research on positive maps,
@@ -1651,9 +1682,12 @@ operators $A_j(k_j)=\textbf{a}_j(k_j)\cdot \vec {\sigma} $ with
 spectrum in $\{-1,+1\}$ where $\sigma $ is the vector of Pauli
 matrices and $\textbf{a}_j(k_j)$ is a normalized vector in $R^3$.
 Consequently the n-qubit quantum correlation function has the form:
-\ben E_q(k)={\tr}[\rho \otimes ^n_{j=1}\textbf{a}_j (k_j)\cdot\vec
-{\sigma}] = \nonumber \\ \<T, \textbf{a}_1\otimes \cdots\otimes\vec
-\textbf{a}_n \>. \label{eq} \een Inserting $E_q(k)$ to the expression
+\ben 
+E_q(k)={\tr}[\rho \otimes ^n_{j=1}\textbf{a}_j (k_j)\cdot\vec
+{\sigma}] = \nonumber \\ 
+\<T, \textbf{a}_1\otimes \cdots\otimes\vec{\textbf{a}_n} \>. \label{eq} 
+\een 
+Inserting $E_q(k)$ to the expression
 (\ref{ogol2}) and using (\ref{stan}) one obtains that the correlations
 between the measurement on $n$ qubits admit an LHVM iff in any set of
 local coordinate system and for any set of unit vectors $\textbf{c}_j=
@@ -2480,7 +2514,7 @@ stronger criterion than the PPT one, is distinguished. Consequently,
 all the corresponding entanglement witnesses are called {\it
   decomposable} and are of the form (see \cite{Lewenstein00a}):
 \begin{equation}
-W^{dec}=P+Q^{\Gamma}, \label{DecomposableWitness}
+W^{dec}=P+Q^{\Gamma},
 \label{eq:dec_witness}
 \end{equation}
 where $P$, $Q$ are some positive operators. It can be easily shown
