--- a/0808.3773/areareviewfinalxxxsubmission.tex
+++ b/0808.3773/areareviewfinalxxxsubmission.tex
@@ -1,7 +1,7 @@
-\documentclass[12pt,rmp,floatfix,epsfig,graphics]{revtex4} % showpacs
+\documentclass[rmp,floatfix,12pt]{revtex4} % showpacs
 %\documentclass[twocolumn,floatfix,epsfig,graphics]{revtex4} % showpacs
 
-\usepackage{amsmath,amsfonts,amssymb,graphics,graphicx,epsfig,times,color,bbm,fancybox}
+\usepackage{amsmath,amsfonts,amssymb,graphics,graphicx,epsfig,color,bbm,fancybox}
 
 \usepackage[sort&compress]{natbib}
 
@@ -62,7 +62,7 @@ bookmarksopenlevel=10
 %\titlelabel{{\thetitle}.\quad}
 %\input{../helpers/psu-plain-titles.tex}
 %\input{../helpers/psu-sc-headers.tex}
-%\input{../helpers/fix-revtex-12.tex}
+\input{fix-revtex-12.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
@@ -81,6 +81,7 @@ London, London SW7 2PG, UK\smallskip\newline
 $^4\,$Institut f{\"u}r Theoretische Physik, University of Ulm, 89069 Ulm, Germany}
 \begin{abstract}
 \baselineskip=13pt
+\parskip=13pt
 Physical interactions in quantum many-body systems are typically
 local: Individual constituents interact mainly with their few 
 nearest neighbors. This locality of interactions is inherited 
@@ -178,8 +179,7 @@ system, denoting its sites with the set $I$ and all other
 sites with $O=L\backslash I$. If we consider the reduced state 
 $\rho_I= \tr_{O}[\rho]$ of the sites of the region $I$, 
 the state will not be pure in general and will have a 
-non-vanishing von-Neumann entropy $S(\rho_I)$.
-\footnote{Of interest are also other entropies, such as the 
+non-vanishing von-Neumann entropy $S(\rho_I)$.\footnote{Of interest are also other entropies, such as the 
 {\it Renyi entropies}, $S_\alpha(\rho) =(1-\alpha)^{-1} 
 \log_2 \tr [\rho^\alpha]$ with $\alpha\geq 0$. For 
 $\alpha\searrow 1$ the usual von-Neumann entropy is recovered. 
