--- a/quant-ph-0702225/ent-review-last.tex
+++ b/quant-ph-0702225/ent-review-last.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%  The MAnuscript %%%%%%%%%%%%%%%
-\documentclass[aps,rmp,12pt]{revtex4}
+\documentclass[aps,rmp,12pt]{revtex4-1}
 
 \usepackage[colorlinks=true
 ,breaklinks=true
@@ -18,12 +18,12 @@ bookmarksopenlevel=10
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.05}
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\sloppy
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
+\input{../helpers/fix-revtex-12.tex}
 
 %\usepackage{refcheck}
 \usepackage{amssymb}
