--- a/quant-ph-0702225/ent-review-last.tex
+++ b/quant-ph-0702225/ent-review-last.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%  The MAnuscript %%%%%%%%%%%%%%%
-\documentclass[aps,rmp,12pt]{revtex4-1}
+\documentclass[rmp,12pt]{revtex4}
 
 \usepackage[colorlinks=true
 ,breaklinks=true
@@ -23,7 +23,7 @@ bookmarksopenlevel=10
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/mnsymbol.tex}
 \input{../helpers/fix-underbrace.tex}
-\input{../helpers/fix-revtex-12.tex}
+\input{fix-revtex-12.tex}
 
 %\usepackage{refcheck}
 \usepackage{amssymb}
@@ -290,7 +290,7 @@ Technical University of Gda\'nsk, 80--952 Gda\'nsk, Poland
 
 \begin{abstract}
 \baselineskip=13pt
-\parskip=16pt
+\parskip=14pt
 
 All our former experience with application of quantum theory seems
 to say: {\it what is predicted by quantum formalism must  occur in
