--- a/0808.3773/areareviewfinalxxxsubmission.tex
+++ b/0808.3773/areareviewfinalxxxsubmission.tex
@@ -1,4 +1,4 @@
-\documentclass[rmp,floatfix,12pt]{revtex4} % showpacs
+\documentclass[rmp,floatfix,12pt,preprint]{revtex4-2} % showpacs
 %\documentclass[twocolumn,floatfix,epsfig,graphics]{revtex4} % showpacs
 
 \usepackage{amsmath,amsfonts,amssymb,graphics,graphicx,epsfig,color,bbm,fancybox}
