--- a/hep-th-9401125/hep-th-9401125.tex
+++ b/hep-th-9401125/hep-th-9401125.tex
@@ -3,6 +3,9 @@
 %Date: Tue, 25 Jan 94 22:58:50 EST
 
 %plaintex
+\def\lb{\langle}
+\def\rb{\rangle}
+
 \magnification=1200
 \voffset=0.0 true in
 \hoffset=0.0 true in
@@ -57,7 +60,6 @@ has a classical entropy given by the Bekenstein--Hawking formula.
 \eject
 
 \pageit=1
-\baselineskip 24pt plus 2pt minus 2pt
 
 \bigskip
 \goodbreak
@@ -129,10 +131,10 @@ density matrix $\rho_R$ describing the state
 of the field $\phi_R(t_0,x)$ for $x>0$ by tracing over all degrees of freedom
 $\phi_L(t_0,x)$
 located at $x<0$.
-$$<\phi'_R|\rho_R|\phi^{\prime\prime}_R> = \int {\cal D} \phi_L \,
-        <\phi_L\phi'_R | 0> \, <0|\phi_L\phi^{\prime\prime}_R> \,  \eqno(1)$$
+$$\lb\phi'_R|\rho_R|\phi^{\prime\prime}_R\rb = \int {\cal D} \phi_L \,
+        \lb\phi_L\phi'_R | 0\rb \, \lb0|\phi_L\phi^{\prime\prime}_R\rb \,  \eqno(1)$$
 The entropy of entanglement is defined to be
-$$S = - \int {\cal D} \phi_R <\phi_R | \rho_R \log \rho_R | \phi_R>\, .
+$$S = - \int {\cal D} \phi_R \lb\phi_R | \rho_R \log \rho_R | \phi_R\rb\, .
 \eqno(2)$$
 
 
@@ -140,7 +142,7 @@ To show that this entropy is thermal, we
 introduce a Euclidean path integral representation for the density
 matrix (1).  First, we use a Euclidean functional integral to
 generate projections onto the vacuum.
-$$<0|\phi'_L\phi'_R> = \int {\cal D}\phi \,\,{\rm exp} \Big[- \int_0^\infty
+$$<0|\phi'_L\phi'_R\rb = \int {\cal D}\phi \,\,{\rm exp} \Big[- \int_0^\infty
 d \tau \int dx\ d^{d_\perp}y \, {\cal L} \Big]$$
 The integral is over all fields $\phi(\tau>0,x)$ that at $\tau = 0$
 take on the value $\phi'_L(x)$ for $x<0$ and $\phi'_R(x)$ for $x>0$.
@@ -152,7 +154,7 @@ subject to the boundary condition that
 $\phi(\tau=+\epsilon,x>0) = \phi^{\prime\prime}_R(x)$ just above the cut and
 $\phi(\tau=-\epsilon,x>0) =\phi'_R(x)$ just below it,
 $$\eqalign{
-<\phi'_R|\rho_R|\phi^{\prime\prime}_R> = C \ \int {\cal D}\phi \,\,
+\lb\phi'_R|\rho_R|\phi^{\prime\prime}_R\rb = C \ \int {\cal D}\phi \,\,
 & e^{- S}\ \delta[\phi_R(\tau=-\epsilon)-\phi'_R]\
 \delta[\phi_R(\tau=+\epsilon)-\phi^{\prime\prime}_R]\cr
 &\qquad{\rm exp} \left\lbrace + \int_{- \epsilon}^{+ \epsilon} d\tau
@@ -168,7 +170,7 @@ quantization$^7$.
 Introduce the Euclidean Rindler Hamiltonian $H_R$ which is the generator of
 rotations in the $\tau$--$x$ plane (in Minkowski space it is the
 Lorentz boost generator).  The above path integral is then seen to be
-$<\phi'_R|{\rm exp}\left(-2\pi H_R\right)|\phi^{\prime\prime}_R>$, so
+$\lb\phi'_R|{\rm exp}\left(-2\pi H_R\right)|\phi^{\prime\prime}_R>$, so
 $\rho_R = e^{-2 \pi H_R}\,.$\footnote{*}{This is nothing more than
 the standard Euclidean demonstration that
 the Minkowski vacuum looks thermal to a Rindler observer.}
@@ -541,7 +543,7 @@ presence of general relativity, there should be a tree-level contribution
 to both entropies.  In other words, corresponding to the Bekenstein-Hawking
 entropy of the horizon of an infinitely massive black hole,
 there should be an entropy associated
-with an imaginary planar boundary in perfectly flat space, with $S=(Area)/4$.
+with an imaginary planar boundary in perfectly flat space, with $S=({\it Area})/4$.
 If this boundary entropy ought to be interpreted as a classical
 entropy of entanglement, then it suggests that whatever the
 fundamental generalization of Einstein's theory of gravity, it should be
