--- a/hep-th-9401125/hep-th-9401125.tex
+++ b/hep-th-9401125/hep-th-9401125.tex
@@ -142,7 +142,7 @@ To show that this entropy is thermal, we
 introduce a Euclidean path integral representation for the density
 matrix (1).  First, we use a Euclidean functional integral to
 generate projections onto the vacuum.
-$$<0|\phi'_L\phi'_R\rb = \int {\cal D}\phi \,\,{\rm exp} \Big[- \int_0^\infty
+$$\lb 0|\phi'_L\phi'_R\rb = \int {\cal D}\phi \,\,{\rm exp} \Big[- \int_0^\infty
 d \tau \int dx\ d^{d_\perp}y \, {\cal L} \Big]$$
 The integral is over all fields $\phi(\tau>0,x)$ that at $\tau = 0$
 take on the value $\phi'_L(x)$ for $x<0$ and $\phi'_R(x)$ for $x>0$.
@@ -170,7 +170,7 @@ quantization$^7$.
 Introduce the Euclidean Rindler Hamiltonian $H_R$ which is the generator of
 rotations in the $\tau$--$x$ plane (in Minkowski space it is the
 Lorentz boost generator).  The above path integral is then seen to be
-$\lb\phi'_R|{\rm exp}\left(-2\pi H_R\right)|\phi^{\prime\prime}_R>$, so
+$\lb\phi'_R|{\rm exp}\left(-2\pi H_R\right)|\phi^{\prime\prime}_R\rb$, so
 $\rho_R = e^{-2 \pi H_R}\,.$\footnote{*}{This is nothing more than
 the standard Euclidean demonstration that
 the Minkowski vacuum looks thermal to a Rindler observer.}
