--- a/hep-th-9401125/hep-th-9401125.tex
+++ b/hep-th-9401125/hep-th-9401125.tex
@@ -5,18 +5,20 @@
 %plaintex
 \def\lb{\langle}
 \def\rb{\rangle}
+\input font_palatino
 
 \magnification=1200
 \voffset=0.0 true in
 \hoffset=.3 true in
 \vsize=7.5in
 \hsize=5.1in
+
 \tolerance 10000
 \newcount \pageit
 \footline={\hss\tenrm\ifnum\pageit=0 \hfill \else \number\pageno \fi\hss}
 \pageit=0
 \pageno=0
-\baselineskip 12pt plus 1pt minus 1pt
+\baselineskip=12.2pt
 \centerline{{\bf A COMMENT ON ENTROPY AND AREA}\footnote{*}
 {\rm This work is supported in part by funds provided by the U. S. Department
 of Energy (D.O.E.) under contract \#DE--FG05--90ER40559.}}
